Atualização da API Rest para inclusão da função de adição de tema baseado em WMS
